Fix alignment of social icons in IE8

--- a/app/assets/stylesheets/layout/_common.scss
+++ b/app/assets/stylesheets/layout/_common.scss
@@ -58,5 +58,5 @@
 
 .l-split-end {
   @include column(6);
-  float: left;
+  float: right;
 }
